Completed the outline of result page

--- a/Result.html
+++ b/Result.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="ResultStyle.css">
+    
+    <title>Code Battle - Scoreboard</title>
 </head>
 <body>
-    
+
+    <img src="Logo.png", height="100">
+    <h1>Final Scoreboard</h1>
+
+    <table>
+        <tr>
+            <th>Team ID</th>
+            <th>Team Name</th>
+            <th>Category</th>
+            <th>Marks</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Team X</td>
+            <td>-</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Team Y</td>
+            <td>-</td>
+            <td>80</td>
+        </tr>
+    </table>
+
 </body>
 </html>
