Added Fotter and updated the table

--- a/Result.html
+++ b/Result.html
@@ -17,21 +17,42 @@
             <th>Team ID</th>
             <th>Team Name</th>
             <th>Category</th>
-            <th>Marks</th>
+            <th>Criteria I Total Marks</th>
+            <th>Criteria II Total Marks</th>
+            <th>Criteria III Total Marks</th>
         </tr>
         <tr>
             <td>1</td>
             <td>Team X</td>
             <td>-</td>
-            <td>90</td>
+            <td>30</td>
+            <td>27</td>
+            <td>21</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Team Y</td>
             <td>-</td>
-            <td>80</td>
+            <td>28</td>
+            <td>26</td>
+            <td>25</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Team Z</td>
+            <td>-</td>
+            <td>18</td>
+            <td>23</td>
+            <td>17</td>
         </tr>
     </table>
+    
+    <br><br><br><br><br>
+    <br><br><br><br><br>
 
 </body>
+<footer>
+    <p>Code Battle &copy; 2024. All rights reserved. Made in U.A.E</p>
+    <p>Contact us at: info@codebattle.com</p>
+</footer>
 </html>
