Added Total Marks

--- a/Result.html
+++ b/Result.html
@@ -17,9 +17,10 @@
             <th>Team ID</th>
             <th>Team Name</th>
             <th>Category</th>
-            <th>Criteria I Total Marks</th>
-            <th>Criteria II Total Marks</th>
-            <th>Criteria III Total Marks</th>
+            <th>Criteria I Marks</th>
+            <th>Criteria II Marks</th>
+            <th>Criteria III Marks</th>
+            <th>Total Marks</th>
         </tr>
         <tr>
             <td>1</td>
@@ -28,6 +29,7 @@
             <td>30</td>
             <td>27</td>
             <td>21</td>
+            <td>78</td>
         </tr>
         <tr>
             <td>2</td>
@@ -36,6 +38,7 @@
             <td>28</td>
             <td>26</td>
             <td>25</td>
+            <td>79</td>
         </tr>
         <tr>
             <td>3</td>
@@ -44,6 +47,7 @@
             <td>18</td>
             <td>23</td>
             <td>17</td>
+            <td>58</td>
         </tr>
     </table>
     
