adjustments are left to get the login page done

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <div class="container">
         <div class="form-container">
             <form>
-		<h1>Welcome to CodeBattle</h1>
+		<h1>Welcome to <font color="#F73634">Code</font>Battle</h1>
+        	<label class="radio-container">Admin<input type="radio" name="role" value="Admin"><span class="checkmark"></span></label>
+		<label class="radio-container">Judge<input type="radio" name="role" value="Judge"><span class="checkmark"></span></label>
+		<hr></hr>
 		<p>Please enter your Log in details to proceed.</p>
                 <label for="username"></label>
                 <input type="text" id="username" name="username" placeholder="Username" >
                 <label for="password"></label>
                 <input type="password" id="password" name="password" placeholder="Password" >
-		<a href="/">forgot your password?</a>
 		<hr></hr>
                 <button type="submit">Log In</button>
             </form>
