--- a/index.html
+++ b/index.html
@@ -28,4 +28,8 @@
         </div>
     </div>
 </body>
+<footer>
+    <p>Code Battle &copy; 2024. All rights reserved. Made in U.A.E</p>
+    <p>Contact us at: info@codebattle.com</p>
+</footer>
 </html>
