Edited the login page and created images folder

--- a/Result.html
+++ b/Result.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img src="Logo.png", height="100">
+    <img src="Images/Logo.png", height="100">
     <h1>Final Scoreboard</h1>
 
     <table>
