--- a/Result.html
+++ b/Result.html
@@ -8,8 +8,9 @@
     <title>Code Battle - Scoreboard</title>
 </head>
 <body>
-
-    <img src="Images/Logo.png", height="100">
+    <a href="index.html">
+        <img src="Images/Logo.png", height="100">
+    </a>
     <h1>Final Scoreboard</h1>
 
     <table>
