Finished Admin.html

--- a/Admin.html
+++ b/Admin.html
@@ -15,33 +15,28 @@
             <th>Hackathon ID</th>
             <th>Hackathon Name</th>
             <th>Date</th>
-            <th>Edit</th>
-            <th>View</th>
         </tr>
         <tr>
             <td>1</td>
             <td>-</td>
             <td>-</td>
-            <td><button type="button" class="table-buttons">Edit</button></td>
-            <td><button type="button" class="table-buttons">View</button></td>
         </tr>
         <tr>
             <td>2</td>
             <td>-</td>
             <td>-</td>
-            <td><button type="button" class="table-buttons">Edit</button></td>
-            <td><button type="button" class="table-buttons">View</button></td>
         </tr>
         <tr>
             <td>3</td>
             <td>-</td>
             <td>-</td>
-            <td><button type="button" class="table-buttons">Edit</button></td>
-            <td><button type="button" class="table-buttons">View</button></td>
         </tr>
     </table>
-
-    <button type="button" id = "createButton">Create a new hackathon</button>
+    <div class="button-container">
+        <button type="button">View Hackathon</button> &nbsp; &nbsp;
+        <button type="button">Edit Hackathon</button> &nbsp; &nbsp;
+        <button type="button">Create Hackathon</button> &nbsp; &nbsp;
+    </div>
 </body>
 <footer>
     <p>Code Battle &copy; 2024. All rights reserved. Made in U.A.E</p>
