Made some changes

--- a/Admin.html
+++ b/Admin.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="AdminStyle.css">
-
     <title>Code Battle - Admin</title>
+    <style>
+        body{
+            font-family: 'Arial', sans-serif;
+            color: #F73634;
+            margin: 0;
+            padding: 0;
+            background-color: #272727;
+            min-height: 100vh;
+        }
+
+        table {
+            width: 50%;
+            border-collapse: collapse;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        th, td {
+            font-size: medium;
+            border: 2px solid;
+            border-color: #878a8a;
+            padding: 8px;
+        }
+
+        h2{
+            text-align: center;
+            color: #ffffff;
+        }
+
+
+        th{
+            color: #fff;
+        }
+
+        .button-container{
+            text-align: center;
+        }
+
+        button{
+            background-color: #F73634;
+            border: none;
+            border-radius: 1rem;
+            color: #fff;
+            cursor: pointer;
+            display: inline;
+            margin-top: 3rem;
+            font-size: large;
+            padding: 5px 15px;
+        }
+
+        footer {
+            background-color: #000000;
+            color: #ffffff; 
+            padding: 5px;
+            text-align: center;
+            position: sticky;
+            top: 100%;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome <font color="#FFFFFF">Admin</font>,</h1>
