--- a/Result.html
+++ b/Result.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ResultStyle.css">
     
     <title>Code Battle - Scoreboard</title>
+    <style>
+        img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        body {
+            min-height: 100vh;
+            font-family: 'Arial', sans-serif;
+            background-image: url("Images/Background.png");
+            color: #F73634;
+            margin: 0;
+            padding: 0;
+        }
+
+        image{
+            align-content: center;
+        }
+
+        table {
+            width: 50%;
+            border-collapse: collapse;
+            background-color: #272727;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        th, td {
+            font-size: medium;
+            border: 2px solid;
+            border-color: #878a8a;
+            padding: 8px;
+        }
+
+        footer {
+            background-color: #272727;
+            color: #ffffff; 
+            padding: 5px;
+            text-align: center;
+            position: sticky;
+            top: 100%;
+        }
+
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <a href="index.html">
