--- a/HCreate.html
+++ b/HCreate.html
@@ -104,7 +104,7 @@
       </fieldset>
       <fieldset>
         <label for="age">Maximum Players per Team: <input id="age" type="number" name="age" min="13" max="120" /></label>
-        <label for="referrer">Age Range?
+        <label for="referrer">Age Range:
           <select id="referrer" name="referrer">
             <option value="">(select one)</option>
             <option value="1">Grade 9</option>
