--- a/Result.html
+++ b/Result.html
@@ -15,7 +15,7 @@
         body {
             min-height: 100vh;
             font-family: 'Arial', sans-serif;
-            background-image: url("Images/Background.png");
+            background-color: #272727;
             color: #F73634;
             margin: 0;
             padding: 0;
@@ -26,22 +26,30 @@
         }
 
         table {
+            text-align: center;
             width: 50%;
             border-collapse: collapse;
-            background-color: #272727;
+            background-color: white;
             margin-left: auto;
             margin-right: auto;
+            border-radius: 18px;
         }
 
-        th, td {
+        th{
+            color: white;
+            background-color: #F73634;
             font-size: medium;
-            border: 2px solid;
-            border-color: #878a8a;
+            padding: 8px;
+        }
+
+        td{
+            color: black;
+            font-size: medium;
             padding: 8px;
         }
 
         footer {
-            background-color: #272727;
+            background-color: black;
             color: #ffffff; 
             padding: 5px;
             text-align: center;
@@ -58,7 +66,7 @@
     <a href="index.html">
         <img src="Images/Logo.png", height="100">
     </a>
-    <h1>Final Scoreboard</h1>
+    <h1>Final <font color = "white">Scoreboard</font></h1>
 
     <table>
         <tr>
