--- a/Admin.html
+++ b/Admin.html
@@ -15,16 +15,26 @@
         }
 
         table {
+            text-align: center;
             width: 50%;
             border-collapse: collapse;
+            background-color: white;
             margin-left: auto;
             margin-right: auto;
+            border-radius: 18px;
         }
 
-        th, td {
+        th{
+            color: white;
+            background-color: #F73634;
             font-size: medium;
-            border: 2px solid;
-            border-color: #878a8a;
+            padding: 8px;
+        } 
+        
+        
+        td {
+            color: black;
+            font-size: medium;
             padding: 8px;
         }
 
@@ -52,6 +62,11 @@
             margin-top: 3rem;
             font-size: large;
             padding: 5px 15px;
+        }
+
+        button:hover{
+            background-color: #000000;
+            color: #ffffff;
         }
 
         footer {
