Styled AddJudge.html

--- a/AddJudge.html
+++ b/AddJudge.html
@@ -49,9 +49,9 @@
         }
 
         input{
-        background-color: #272727;
+        background-color: #ffffff;
         border: 1px;
-        color: #ffffff;
+        color: #272727;
         border-radius: 25px ;
         }
 
@@ -90,7 +90,7 @@
 
         ::placeholder{
             left: 2rem;
-            color: white;
+            color: #272727;
         }
 
         footer {
