modifications on admin and index for logout

--- a/Admin.html
+++ b/Admin.html
@@ -108,6 +108,9 @@
         <button type="button">View Hackathon</button> &nbsp; &nbsp;
         <button type="button">Edit Hackathon</button> &nbsp; &nbsp;
         <button type="button">Create Hackathon</button> &nbsp; &nbsp;
+        <form action="includes/logout.inc.php" method="POST">
+            <button type="submit">Log Out</button>&nbsp; &nbsp;
+        </form>
     </div>
 </body>
 <footer>
