--- a/AddJudge.html
+++ b/AddJudge.html
@@ -17,8 +17,8 @@
         }
 
         #instruction{
-            margin-top: 10rem;
             font-size: large;
+            text-align: center;
         }
 
         h1{
@@ -49,10 +49,10 @@
         }
 
         input{
-        background-color: #ffffff;
-        border: 1px;
-        color: #272727;
-        border-radius: 25px ;
+            background-color: #ffffff;
+            border: 1px;
+            color: #272727;
+            border-radius: 25px ;
         }
 
         button {
@@ -84,12 +84,7 @@
             margin-right: auto;
         }
 
-        .select-container{
-            text-align: center;
-        }
-
         ::placeholder{
-            left: 2rem;
             color: #272727;
         }
 
@@ -100,6 +95,13 @@
             text-align: center;
             position: sticky;
             top: 100%;
+        }
+
+        @media screen and (max-width: 700px) {
+
+            select{
+                width: 50%;
+            }
         }
     </style>
 
@@ -169,13 +171,15 @@
 </head>
 <body>
     <h1>Add <font color = "#F73634">Judges</font></h1>
+    <p for="judges" id = "instruction">Choose No of Judges</p>
+    <select name="judges" id="judges" onchange="generateTextFields()">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
     <div class = "select-container">
-        <label for="judges" id = "instruction">Choose No of Judges</label>
-        <select name="judges" id="judges" onchange="generateTextFields()">
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select>
     </div>
 
     <form id = "formid">
