--- a/admin/Createhackathon/HCreate.html
+++ b/admin/Createhackathon/HCreate.html
@@ -109,14 +109,14 @@
     <h1>Create a <font color = "#F73634">Hackathon</font></h1>
     <p id = "instruction">Please fill out the required information</p>
 
-    <form>
+    <form action="accepting_hackathon_data.php" method="POST">
       <br>
       <h2>Hackathon Details</h2>
       <input id="HName" name="HName" type="text"  placeholder=" Name of the Hackathon"/>
       <label for="HDate">Date: <input id="HDate" name="HDate" type="date" min="2024-03-01"  /></label>
       <label for="HTime">Time: <input id="HTime" name="HTime" type="time"  /></label>
 
-      <input id="MacP" type="number" name="MacP" max="5" placeholder=" Maximum Players per Team"/>
+      <input id="MaxP" type="number" name="MaxP" max="5" placeholder=" Maximum Players per Team"/>
       <br>
       <p>Category</p>
         <input type="radio" id="jr-cadet" name="Category" value="jr-cadet">
@@ -128,7 +128,7 @@
         <input type="radio" id="jr-colonel" name="Category" value="jr-colonel">
         <label for="jr-colonel">Jr Colonel</label>
 
-        <button id="redirectButton" onclick="redirect()">Next</button>
+        <button type="submit">Next</button>
     </form>
 
   </body>
