--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,7 +1,3 @@
-<?php
-require_once "../includes/config_session.inc.php";
-// require_once "../login/login.inc.php";
-if ($_SESSION["user_isadmin"]==1){?> 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,11 +110,11 @@ if ($_SESSION["user_isadmin"]==1){?>
         <button type="button">View Hackathon</button> &nbsp; &nbsp;
         <button type="button">Edit Hackathon</button> &nbsp; &nbsp;
         <!-- <button type="button">Create Hackathon</button> &nbsp; &nbsp; -->
-        <form action="HCreate.html" method="POST">
-            <button type="submit">Create Hackathon</button>
+        <form action="admin_functions.php" method="POST">
+            <button type="submit" name="create_hackathon">Create Hackathon</button>
         </form>
-        <form action="../login/logout.inc.php" method="POST">
-            <button type="submit">Log Out</button>
+        <form action="admin_functions.php" method="POST">
+            <button type="submit" name="logout">Log Out</button>
         </form>
     </div>
 </body>
@@ -127,4 +123,6 @@ if ($_SESSION["user_isadmin"]==1){?>
     <p>Contact us at: info@codebattle.com</p>
 </footer>
 </html>
-<?php }?>
+<?php 
+}
+?>
