Added select to the form and made criteria required

--- a/admin/AddCriteria.html
+++ b/admin/AddCriteria.html
@@ -86,11 +86,11 @@
     <form>
         <br>
         <h2>Crietria Details</h2>
-        <input id="CName1" name="Cname1" type="text"  placeholder=" Criteria 1"/>
-        <input id="CName2" name="Cname2" type="text"  placeholder=" Criteria 2"/>
-        <input id="CName3" name="Cname3" type="text"  placeholder=" Criteria 3"/>
+        <input id="CName1" name="CName1" type="text"  placeholder=" Criteria 1" required/>
+        <input id="CName2" name="CName2" type="text"  placeholder=" Criteria 2" required/>
+        <input id="CName3" name="CName3" type="text"  placeholder=" Criteria 3" required/>
 
-        <button id="redirectButton" onclick="redirect()">Submit</button>
+        <button id="redirectButton">Submit</button>
     </form>
 </body>
 
