--- a/admin/AddJudge.html
+++ b/admin/AddJudge.html
@@ -26,15 +26,6 @@
             text-align: center;
         }
 
-        form {
-            width: 60vw;
-            max-width: 500px;
-            min-width: 300px;
-            margin: 1rem auto;
-            border-radius: 25px;
-            padding: 0 3rem 3rem 3rem ;
-        }
-
         input,
         select {
             display: block;
@@ -68,13 +59,22 @@
 
         select{
             width: 25%;
-            background-color: #F73634;
             font-size: medium;
+            background-color: #F73634;
             color: white;
             padding: 7px;
             border-radius: 25px;
             margin-left: auto;
             margin-right: auto;
+        }
+
+        #text-field-container{
+            width: 60vw;
+            max-width: 500px;
+            min-width: 300px;
+            margin: 1rem auto;
+            border-radius: 25px;
+            padding: 0 3rem 3rem 3rem ;
         }
 
         ::placeholder{
@@ -132,13 +132,14 @@
             var nameLabel, emailLabel, userLabel, passLabel, temp;
             var heading;
 
-            document.getElementById("formid").style.backgroundColor = "#F73634";
+            document.getElementById("text-field-container").style.backgroundColor = "#F73634";
 
             container.appendChild(document.createElement("br")); 
 
             for (var i = 0; i < selectedValue; i++) {
 
                 judgeName = document.createElement("input");
+                judgeName.required
                 judgeName.type = "text";
                 judgeName.placeholder = " Name";
                 judgeName.id = "JName_"+(i+1)
@@ -153,6 +154,7 @@
                 container.appendChild(document.createElement("br")); 
 
                 judgeEmail = document.createElement("input");
+                judgeEmail.required
                 judgeEmail.type = "email";
                 judgeEmail.placeholder = " Email";
                 judgeEmail.id = "JEmail_"+(i+1)
@@ -162,6 +164,7 @@
                 container.appendChild(document.createElement("br")); 
 
                 judgeUsername = document.createElement("input");
+                judgeUsername.required
                 judgeUsername.type = "text";
                 judgeUsername.placeholder = " Username"
                 judgeUsername.id = "Jusername_"+(i+1)
@@ -171,6 +174,7 @@
                 container.appendChild(document.createElement("br")); 
 
                 judgePass = document.createElement("input");
+                judgePass.required
                 judgePass.type = "password";
                 judgePass.placeholder = " Password";
                 judgePass.id = "JPass_"+(i+1)
@@ -181,7 +185,8 @@
                 container.appendChild(document.createElement("hr")); 
             }
 
-            var x = document.createElement("BUTTON");
+            var x = document.createElement("button");
+            x.name = "nextButton";
             var t = document.createTextNode("Next");
             x.appendChild(t);
             document.getElementById("text-field-container").appendChild(x);
@@ -191,19 +196,23 @@
 </head>
 <body>
     <h1>Add <font color = "#F73634">Judges</font></h1>
-    <div class = "select-container">
-        <p for="judges" id = "instruction">Select the number of judges</p>
-        <select name="judgescount" id="judgescount" onchange="generateTextFields()">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select>
-    </div>
+
     <form action="Createhackathon/accept_judges_data.php" method="POST" id = "formid">
+
+        <div class = "select-container">
+            <p for="judges" id = "instruction">Select the number of judges</p>
+            <select name="judgescount" id="judgescount" onchange="generateTextFields()">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+
         <div id="text-field-container">
         </div>
+
     </form> 
     
 </body>
